--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,31 @@
 #canvas {
-  width: 100vw;
-  height: 100vh;
+  width: 1000px;
+  height: 600px;
   border: 5px solid black;
 }
+#chat {
+  min-width: 100px;
+  min-height: 600px;
+  display: flex;
+  flex-direction: column;
+}
+#history {
+  display: flex;
+  flex-direction: column-reverse;
+  height: calc(600px - 30px);
+  overflow-y: scroll;
+}
+#input {
+  height: 30px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 body {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-items: center;
   background: #ccc;
 }
